force-app/main/default/objects/Payment_Plan__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case to which this payment plan belongs.</description>
    <label>Case Management</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>