force-app/main/default/objects/Payment_Plan__c/fields/Case_Payment_Count__c.field-meta.xml
<CustomField>
    <fullName>Case_Payment_Count__c</fullName>
    <label>Case Payment Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>