force-app/main/default/objects/Payment_Plan__c/fields/Date_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Approved__c</fullName>
    <inlineHelpText>For plans with more than 12 payments</inlineHelpText>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>