force-app/main/default/objects/Payment_Plan__c/fields/Date_Rejected__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected__c</fullName>
    <inlineHelpText>For plans with more than 12 payments</inlineHelpText>
    <label>Date Rejected</label>
    <type>Date</type>
</CustomField>