force-app/main/default/objects/Payment_Plan__c/fields/Deputy_Email__c.field-meta.xml
<CustomField>
    <fullName>Deputy_Email__c</fullName>
    <description>Deputy&#39;s email address pulled from the case when the payment plan is created. Populated via workflow rule when the payment plan is created and when the payment date is updated.</description>
    <label>Deputy Email</label>
    <type>Email</type>
</CustomField>