force-app/main/default/objects/Payment_Plan__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Initial Due Date, then after each payment it is the Next Due Date</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>