force-app/main/default/objects/Payment_Plan__c/fields/Imported_From__c.field-meta.xml
<CustomField>
    <fullName>Imported_From__c</fullName>
    <description>Used to identify data migrated from other databases.</description>
    <label>Imported From</label>
    <length>20</length>
    <type>Text</type>
</CustomField>