force-app/main/default/objects/Payment_Plan__c/fields/Installment__c.field-meta.xml
<CustomField>
    <fullName>Installment__c</fullName>
    <label>Installment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>