force-app/main/default/objects/Payment_Plan__c/fields/Installment_Final_Payment__c.field-meta.xml
<CustomField>
    <fullName>Installment_Final_Payment__c</fullName>
    <label>Installment Final Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>