force-app/main/default/objects/Payment_Plan__c/fields/Payment_Day_or_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Day_or_Month__c</fullName>
    <formula>If(text( Frequency__c) = &quot;Weekly&quot;, &quot;every &quot; &amp; TEXT(Day_of_Week_Payment_Due__c), 
  TEXT(Payment_Plan_Day_of_Month_Payment_Due__c) &amp; 
  CASE( Payment_Plan_Day_of_Month_Payment_Due__c,
        1, &quot;st&quot;,
        2, &quot;nd&quot;,
        3, &quot;rd&quot;, 
        4, &quot;th&quot;,
        5, &quot;th&quot;,
        6, &quot;th&quot;,
        7, &quot;th&quot;,
        8, &quot;th&quot;,
        9, &quot;th&quot;,
        10, &quot;th&quot;,
        11, &quot;th&quot;,
        12, &quot;th&quot;,
        13, &quot;th&quot;,
        14, &quot;th&quot;,
        15, &quot;th&quot;,
        16, &quot;th&quot;,
        17, &quot;th&quot;,
        18, &quot;th&quot;,
        19, &quot;th&quot;,
        20, &quot;th&quot;,
        21, &quot;st&quot;,
        22, &quot;nd&quot;,
        23, &quot;rd&quot;,
        24, &quot;th&quot;,
        25, &quot;th&quot;,
        26, &quot;th&quot;,
        27, &quot;th&quot;,
        28, &quot;th&quot;,
        29, &quot;th&quot;,
        30, &quot;th&quot;,
        31, &quot;st&quot;,
        NULL
    )  &amp; &quot; of each month&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Day or Month</label>
    <type>Text</type>
</CustomField>