force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Agreement_Date__c</fullName>
    <inlineHelpText>This field is used to specify when the Payment Plan should be Paid Off</inlineHelpText>
    <label>Payment Plan Agreement Date</label>
    <type>Date</type>
</CustomField>