force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Balance__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Balance__c</fullName>
    <description>Calculates the balance based upon the total of the payment plan and the total payments made</description>
    <formula>IF( BEGINS(Case__r.RecordType.Name, &quot;BOFE&quot;)  || BEGINS(Case__r.RecordType.Name, &quot;RCI&quot;) ,
Payment_Plan_Total_Amount_Due__c -  Payment_Plan_Down__c - Total_Payment_Amount__c,
Payment_Plan_Total_Amount_Due__c -  Payment_Plan_Down__c - Total_Payment_Amount__c +  Payment_Plan_Down__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Remaining balance on the payment plan.</inlineHelpText>
    <label>Payment Plan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>