force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Day_of_Month_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Day_of_Month_Payment_Due__c</fullName>
    <inlineHelpText>Specify the day of the month that the Payment Plan is due. This applies only to monthly payments.</inlineHelpText>
    <label>Day of Month Payment Due (Monthly)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>