force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Down__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Down__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Initial payment made when plan was created</inlineHelpText>
    <label>Down Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>