force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Regular_Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Regular_Payment__c</fullName>
    <inlineHelpText>Amount of regular payment expected on this plan.</inlineHelpText>
    <label>Regular Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>