force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Restitution_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Restitution_Period__c</fullName>
    <label>Payment Plan Restitution Period</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>