force-app/main/default/objects/Payment_Plan__c/fields/Payment_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Type__c</fullName>
    <label>Payment Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wages</fullName>
            </value>
            <value>
                <fullName>Penalty</fullName>
            </value>
            <value>
                <fullName>Combined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>