force-app/main/default/objects/Payment_Plan__c/fields/Responsible_Party__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Plans</relationshipLabel>
    <relationshipName>Responsible_Party_Payment_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>