force-app/main/default/objects/Payment_Plan__c/fields/Scheduled_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Balance_Due__c</fullName>
    <label>Scheduled Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>