force-app/main/default/objects/Payment_Plan__c/fields/Total_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Amount__c</fullName>
    <description>Populated by CasePaymentAll trigger. Is the sum of Case Payments applied to this Payment Plan.</description>
    <inlineHelpText>Total of all Case Payments applied to this Payment Plan. Does not include down payment.</inlineHelpText>
    <label>Total Payments Made</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>