force-app/main/default/objects/Payment_Plan__c/validationRules/Monthly_Payment.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Payment</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Imported_From__c), 
TEXT(Frequency__c) = &#39;Monthly&#39;,
ISBLANK( Payment_Plan_Day_of_Month_Payment_Due__c)
)</errorConditionFormula>
    <errorMessage>If Frequency = Monthly, then Day of Month Payment Due is required.</errorMessage>
</ValidationRule>