force-app/main/default/objects/Payment_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Responsible_Party__c</columns>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Deputy_Email__c</columns>
    <columns>Payment_Plan_Total_Amount_Due__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>